public/assets/styles/responsive.css
/* ... */
@media (max-width: 770px) {
  .main-demo-hero .hero-content-wrapper .hero-content .hero-lead,
  .fs-video-hero .hero-content-wrapper .hero-content .hero-lead,
  .fw-video-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 3.5em;
  }
  .main-demo-hero .hero-content-wrapper .hero-content .hero-lead br,
  .fs-video-hero .hero-content-wrapper .hero-content .hero-lead br,
  .fw-video-hero .hero-content-wrapper .hero-content .hero-lead br {
    display: none;
  }
  .main-demo-hero .hero-content-wrapper .hero-content .hero-subheading,
  .fs-video-hero .hero-content-wrapper .hero-content .hero-subheading,
  .fw-video-hero .hero-content-wrapper .hero-content .hero-subheading {
    margin-top: 50px;
  }
  .fs-slider-hero .fs-slide-1 .hero-content .hero-lead,
  .fs-slider-hero .fs-slide-2 .hero-content .hero-lead {
    font-size: 3em;
  }
  .fs-slider-hero .fs-slide-1 .hero-content .hero-subheading,
  .fs-slider-hero .fs-slide-2 .hero-content .hero-subheading {
    margin-top: 50px;
  }
  .fs-slider-hero .fs-slide-3 .hero-content .hero-lead {
    font-size: 2em;
  }
  .text-slider-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 7em;
  }
  .animated-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 4.5em;
    letter-spacing: 15px;
  }
  .kenburn-hero .hero-wrapper .hero-content .lead-white-bg {
    font-size: 3em !important;
  }
  .freelancer-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 3em;
    letter-spacing: 7px;
  }
  .landing-hero {
    height: 1200px;
  }
  .landing-hero .bg-overlay {
    height: 100%;
  }
  .landing-hero .heading-wrapper {
    margin-top: 160px;
  }
  .landing-hero .form-wrapper {
    margin: 100px 15px 0 15px;
    padding-left: 35px;
    padding-right: 35px;
  }
  .landing-hero .scroller {
    display: none;
  }
  .agency2-hero .hero-content-wrapper {
    padding-left: 0;
  }
  .agency2-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 3em;
  }
  .agency2-hero .hero-content-wrapper .hero-content .hero-secondary {
    letter-spacing: 10px;
  }
  .agency2-hero .hero-content-wrapper .hero-content .btn {
    margin-top: 25px;
  }
  .agency2-hero .hero-content-wrapper .hero-content img {
    margin-bottom: 50px;
  }
  .app-hero .hero-text .hero-lead {
    font-size: 2.5em;
    letter-spacing: 5px;
  }
  .app-hero .hero-text p br {
    display: none;
  }
  .app-hero .hero-text .btn-light {
    margin-left: 0;
  }
  .app-hero .hero-text .btn {
    margin-bottom: 15px;
  }
  .web-app-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 50px;
    letter-spacing: 5px;
  }
}

@media (max-width: 600px) {
  .main-demo-hero .hero-content-wrapper,
  .fs-video-hero .hero-content-wrapper,
  .fw-video-hero .hero-content-wrapper {
    padding-left: 15px;
    padding-right: 15px;
  }
  .main-demo-hero .hero-content-wrapper .hero-content .hero-lead br,
  .fs-video-hero .hero-content-wrapper .hero-content .hero-lead br,
  .fw-video-hero .hero-content-wrapper .hero-content .hero-lead br {
    display: none;
  }
  .main-demo-hero .hero-content-wrapper .hero-content .hero-subheading,
  .fs-video-hero .hero-content-wrapper .hero-content .hero-subheading,
  .fw-video-hero .hero-content-wrapper .hero-content .hero-subheading {
    margin-top: 50px;
  }
  .main-demo-hero .hero-content-wrapper {
    padding-left: 0;
    padding-right: 0;
  }
  .main-demo-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 2.8em;
  }
  .fs-slider-hero .fs-slide-1 .hero-content .hero-lead,
  .fs-slider-hero .fs-slide-2 .hero-content .hero-lead {
    font-size: 3em;
  }
  .fs-slider-hero .fs-slide-1 .hero-content .hero-subheading,
  .fs-slider-hero .fs-slide-2 .hero-content .hero-subheading {
    margin-top: 50px;
  }
  .fs-slider-hero .fs-slide-3 .hero-content .hero-lead {
    margin-bottom: 35px;
  }
  .fs-slider-hero .fs-slide-3 .hero-content .hero-subheading {
    margin-top: 0;
    margin-bottom: 35px;
    font-size: .8em;
  }
  .text-slider-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 4em;
  }
  .animated-hero .hero-content-wrapper .hero-content .hero-lead {
    font-size: 3.5em;
    letter-spacing: 5px;
  }
  .fw-slider-hero .fw-slide-1 .hero-content-wrapper .hero-content .hero-lead,
  .fw-slider-hero .fw-slide-3 .hero-content-wrapper .hero-content .hero-lead {
    font-size: 3em;
    letter-spacing: 5px;
  }
  .fw-slider-hero .fw-slide-2 .hero-content-wrapper .hero-content {
    text-align: center !important;
  }
  .fw-slider-hero .fw-slide-2 .hero-content-wrapper .hero-content .hero-lead {
    font-size: 3em;
  }
  .agency-hero .hero-wrapper .hero-content {
    padding-left: 35px;
    padding-right: 35px;
  }
  .agency-hero .hero-wrapper .hero-content .text-wrapper {
    margin-top: 50px;
    padding: 0;
  }
  .agency-hero .hero-wrapper .hero-content .text-wrapper p br {
    display: none;
  }
  .app-hero .scroller {
    display: none;
  }
}

/* ---- Shop (eCommerce) Layout ---- */
@media (max-width: 1260px) {
  .shop-product-card {
    margin: 0 auto 50px auto;
  }
  .shop-layout-options .col-md-3 {
    float: none !important;
    text-align: right;
  }
  .checkout-coupon-form .col-lg-4 {
    padding-right: 0;
  }
  .checkout-coupon-form .col-lg-4 .form-control {
    margin-bottom: 30px;
  }
  .calc-shipping .calc-form .form-group {
    padding-left: 0;
    padding-right: 0;
  }
  .calc-shipping .calc-form .btn-totals {
    clear: both;
  }
  .totals-group {
    margin-top: 100px;
    clear: both;
  }
  .totals-group .checkout-btn-wrapper {
    padding-right: 30px;
  }
  .totals-group .checkout-btn-wrapper .checkout-btn {
    left: 100%;
    -webkit-transform: translateX(-100%);
        -ms-transform: translateX(-100%);
            transform: translateX(-100%);
  }
}
/* ... */

